--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,10 @@ header::after {
   margin-right: 8px;
 }
 
+.login-form  {
+  background-color: #ec4d4d;
+}
+
 .navbar-brand h1 {
   margin: 0;
 }
