modified:   assets/css/style.css new file:   assets/images/Red and Blue Abstract Background Image.jpg deleted:    assets/images/featured-img1.jpg deleted:    assets/images/featured-img2.jpg deleted:    assets/images/gallery1.jpg deleted:    assets/images/gallery3.jpg deleted:    assets/images/post1.jpg deleted:    assets/images/post2.jpg deleted:    assets/images/post3.jpg deleted:    assets/images/post4.jpg deleted:    assets/images/rcnt-post1.png deleted:    assets/images/rcnt-post2.png deleted:    assets/images/rcnt-post3.png deleted:    assets/images/test-clients-bg.png deleted:    assets/images/test1.png deleted:    assets/images/universe.jpeg modified:   index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,10 +54,6 @@ header::after {
   margin-right: 8px;
 }
 
-.login-form  {
-  background-color: #ec4d4d;
-}
-
 .navbar-brand h1 {
   margin: 0;
 }
@@ -723,7 +719,7 @@ form button.btn-primary:hover {
     1 - Footer
 ------------------------------------*/
 footer {
-  background: url(../images/footer-bg.png) center center/cover no-repeat #26264b;
+  background: url(../images/Red\ and\ Blue\ Abstract\ Background\ Image.jpg) center center/cover no-repeat #26264b;
 }
 
 /*-----------------------------------
@@ -895,11 +891,11 @@ span {
 .foot-note {
   padding: 35px 0;
   background-color: #ee1515;
-  color: #26264b;
+  color: #fbfbfc;
 }
 
 .foot-note a {
-  color: #26264b;
+  color: #f5f5f5;
 }
 
 .foot-note a:last-child {
